--- a/index.html
+++ b/index.html
@@ -480,12 +480,14 @@
         <div class="footer-subscribe">
           <p class="footer-subscribe-text">Subscribe</p>
           <form class="footer-form">
-            <input
-              type="email"
-              name="footer-email"
-              class="footer-input"
-              placeholder="E-mail"
-            />
+            <label for="user-subscribe" class="footer-label">
+              <input
+                type="email"
+                name="footer-email"
+                id="user-subscribe"
+                class="footer-input"
+                placeholder="E-mail"
+            /></label>
             <button type="submit" class="footer-btn">
               Subscribe
               <svg class="footer-icon-btn" width="24" height="24">
@@ -496,7 +498,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="modal-close-icon" width="8" height="8">
@@ -547,31 +549,31 @@
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label for="user-text" class="modal-label">Comment</label>
+          <div class="modal-field-comment">
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
-              name="user-text"
-              id="user-text"
+              name="user-comment"
+              id="user-comment"
               class="modal-textarea"
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="modal-field">
+          <div class="modal-field-check">
             <input
               type="checkbox"
-              name="policy"
-              id="policy"
+              name="user-privacy"
+              id="user-privacy"
               class="form-check visually-hidden"
               value="true"
             />
-            <label for="policy" class="check-text"
-              ><span>
+            <label for="user-privacy" class="check-text"
+              ><span class="check-part">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a href="">Privacy Policy</a></label
+              <a class="privacy-link" href="">Privacy Policy</a></label
             >
           </div>
           <button type="submit" class="modal-btn">Send</button>
