--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
         </div>
       </div>
     </footer>
+    <!--========backdrop==========-->
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">
@@ -516,7 +517,7 @@
                 class="modal-input"
                 id="user-name"
               />
-              <svg class="modal-icon" width="24" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
